force-app/main/default/objects/FeeType__c/FeeType__c.object-meta.xml
<CustomObject>
    <description>Different Fee Types based on Domestic or International Course</description>
    <label>Fee Type</label>
    <nameField>
        <displayFormat>AID-FT-{0000}</displayFormat>
        <label>Fee Type ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>