force-app/main/default/objects/FeeType__c/fields/L_AD_Active__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the fee type value is active or not.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>