force-app/main/default/objects/FeeType__c/fields/L_AD_Fee_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Fee_Type_Category__c</fullName>
    <description>Type of Fees for the course i.r domestic or international</description>
    <label>Fee Type Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International-Onshore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>