force-app/main/default/objects/FeeType__c/fields/L_AD_Fee_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Fee_Type_Code__c</fullName>
    <description>Fee Type Code to identify type of fees</description>
    <label>Fee Type Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSP</fullName>
            </value>
            <value>
                <fullName>DFP</fullName>
            </value>
            <value>
                <fullName>IFP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>