force-app/main/default/objects/FeeType__c/fields/L_AD_Fee_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Fee_Type_Description__c</fullName>
    <label>Fee Type Description</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>