force-app/main/default/objects/FeeType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>L_AD_Fee_Type_Code__c</columns>
    <columns>L_AD_Fee_Type_Category__c</columns>
    <columns>L_AD_Fee_Type_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>